<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="pencarian_film">Search Movie</string>
    <string name="search_button">Search Button</string>
    <string name="poster_desc">Poster Desc</string>
    <string name="judul">Title</string>
    <string name="tgl_rilis">Release Date</string>
    <string name="keterangan">Movie Overview</string>
    <string name="popularitas">Popularity</string>
    <string name="pilihan">Option</string>
    <string name="beranda">Home</string>
    <string name="favorit">Favorite</string>
    <string name="film_favorit">Favorite Movie</string>
    <string name="konfig">Settings</string>
    <string name="bahasa">Change Language</string>
    <string name="rincian">Detail</string>
    <string name="bagikan">Share</string>
    <string name="sedang_tayang">Now Playing</string>
    <string name="akan_datang">Upcoming</string>
    <string name="memuat">Loading, Please Wait ...</string>
    <string name="data_favorit">No favorite movies have been added</string>
    <string name="data_ditambahkan">Favorite Movie Added</string>
    <string name="data_dihapus">Favorite Movie Deleted</string>
    <string name="hapus">Delete</string>
    <string name="pesan_hapus">Delete this movie from favorite list ?</string>
    <string name="ya">Yes</string>
    <string name="tidak">No</string>
    <string name="notif_harian">Daily Reminder</string>
    <string name="notif_upcoming">Release Today Reminder</string>
    <string name="notif_msg">Movie Catalogue missing you ...</string>
    <string name="notif_msg_rilis">Today %s Release</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie Catalogue</string>
    <string name="nav_header_subtitle">luthfialfarizi98@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="title_activity_home">Movie Catalogue</string>

</resources>
